- refactored css class names in Analytics.module.css & AnalyticsCard.module.css - rearranged imports - removed padding from Catalog.module.css file of .catalog-wrapper - fix label & text overlap in search input - added test-id for test-cases & made some minor improvements - removed /analytics route from app.jsx

--- a/packages/ui/src/components/admindashboard/Catalog.module.css
+++ b/packages/ui/src/components/admindashboard/Catalog.module.css
@@ -3,7 +3,6 @@
   margin-top: 1rem;
   margin-bottom: 4rem;
   background-color: var(--gray-drag-drop-background);
-  padding: 0 8%;
   border-radius: 16px;
 }
 
