--- a/packages/ui/src/components/analytics/Analytics.module.css
+++ b/packages/ui/src/components/analytics/Analytics.module.css
@@ -1,4 +1,4 @@
-.analyticSection {
+.analytics {
   opacity: 0.99;
   align-self: stretch;
   width: 100%;
