--- a/packages/ui/src/components/analytics/AnalyticsCard.module.css
+++ b/packages/ui/src/components/analytics/AnalyticsCard.module.css
@@ -7,90 +7,102 @@
   font-style: normal;
   line-height: normal;
 }
-.cardGroup,
-.leftContent,
-.rightContent {
+
+.card-group,
+.left-content,
+.right-content {
   display: flex;
   align-items: flex-start;
 }
-.cardContent {
+
+.card-content {
   display: flex;
   width: 100%;
   gap: 2rem;
   justify-content: space-between;
   align-items: last baseline;
 }
-.cardTitle,
-.trackingText {
+
+.card-title,
+.tracking-text {
   color: #475467;
   font-weight: 400;
 }
-.cardTitle {
+
+.card-title {
   font-size: 24px;
   letter-spacing: 0.48px;
 }
-.cardValue {
+
+.card-value {
   color: var(--Primary-blue, #4f46e5);
   font-size: 2rem;
   font-weight: 600;
 }
-.changeValuePositive,
-.changeValueNegative {
+
+.change-value-positive,
+.change-value-negative {
   font-size: 20px;
   font-weight: 600;
 }
-.changeValuePositive {
+
+.change-value-positive {
   color: #00b69b;
 }
-.changeValueNegative {
+
+.change-value-negative {
   color: #f93c65;
 }
-.trackingText {
+
+.tracking-text {
   font-size: 16px;
 }
-.leftContent {
+
+.left-content {
   flex-direction: column;
   gap: 16px;
 }
-.rightContent {
+
+.right-content {
   flex-direction: column;
   gap: 8px;
 }
-.changeGraph {
+
+.change-graph {
   width: 50px;
   height: 30px;
 }
 
 /* Separate Mobile Styles */
 @media (max-width: 768px) {
-  .cardTitle {
+  .card-title {
     font-size: 20px;
     letter-spacing: 0.4px;
   }
 
-  .cardValue {
+  .card-value {
     font-size: 36px;
   }
 
-  .changeValuePositive,
-  .changeValueNegative {
+  .change-value-positive,
+  .change-value-negative {
     font-size: 16px;
   }
 
-  .trackingText {
+  .tracking-text {
     font-size: 14px;
   }
 
-  .leftContent {
+  .left-content {
     gap: 4px;
     width: auto;
   }
 
-  .rightContent {
+  .right-content {
     gap: 4px;
   }
 
-  .changeGraph {
+  .change-graph {
     width: 39.429px;
     height: 24px;
   }
